--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -1,4 +1,6 @@
 {% load static %}
+<script type="text/javascript" src="{% static "ckeditor/ckeditor-init.js" %}"></script>
+<script type="text/javascript" src="{% static "ckeditor/ckeditor/ckeditor.js" %}"></script>
 
 <!doctype html>
 <html lang="es">
@@ -18,15 +20,45 @@
 
 <body>
   <section class="container">
-    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-      <a href="index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-        <img class="bi me-2" width="35" height="32" src="{% static 'img/logo.png' %}">
-        <span class="fs-4">RobotBlog</span>
-      </a>
-      <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
-        aria-expanded="false">
-        <img src="{% static 'img/user.png' %}" alt="mdo" width="32" height="32" class="rounded-circle">
-      </a>
+    <header class="d-flex flex-wrap justify-content-between py-3 mb-4 border-bottom">
+      <section class="dropdown">
+        <a href={% url 'inicio' %} class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+          <img class="bi me-2" width="35" height="32" src="{% static 'img/logo.png' %}">
+          <span class="fs-4">RobotBlog</span>
+        </a>
+      </section>
+
+      {%if request.user.is_authenticated %}
+
+        <section class="flex-shrink-0 dropdown">
+          <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
+            aria-expanded="false">
+          <span>Hola @{{ request.user.username | title }}</span>
+          </a>
+          <ul class="dropdown-menu text-small shadow">
+            {% if request.user.is_staff %}
+              <li><a class="dropdown-item" href={% url 'crear_articulo' %}>Crear Artículo</a></li>
+            {% endif %}
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="{% url 'logout' %}">Salir</a></li>
+          </ul>
+        </section>
+
+      {% else %}
+
+        <section class="flex-shrink-0 dropdown">
+          <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
+            aria-expanded="false">
+            <span>MENU</span>
+          </a>
+          <ul class="dropdown-menu text-small shadow">
+              <li><a class="dropdown-item" href={% url 'login' %}>Login</a></li>
+              <li><a class="dropdown-item" href={% url 'signup' %}>Registrarse</a></li>
+          </ul>
+        </section>
+
+      {% endif %}
+
     </header>
 
     <main class="mt-2">
@@ -51,36 +83,35 @@
 
             <article class="p-4 mb-3 bg-light rounded">
               <h4 class="fst-italic text-center">Acerca de</h4>
-              <p class="mb-0 text-justify">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae totam sit
-                unde
-                laboriosam
-                facere, numquam fuga similique hic, officia ratione fugiat, exercitationem deleniti velit inventore
-                tenetur earum distinctio quasi eveniet.</p>
+              <p class="mb-0 text-justify">{{ acerca }}</p>
             </article>
 
             <article class="p-4 text-center">
               <h4 class="fst-italic">Categorías</h4>
               <ol class="list-unstyled mb-0">
-                <li><a class=text-decoration-none href="categoria.html">Categoría #</a></li>
-                <li><a class=text-decoration-none href="categoria.html">Categoría #</a></li>
+                {% for categoria in categorias %}
+                  <li><a class=text-decoration-none href= {% url 'categoria' categoria_slug=categoria.slug%} >{{ categoria }}</a></li>
+                {% endfor %}
               </ol>
             </article>
 
             <article class="p-4 text-center">
               <h4 class="fst-italic">Archivos</h4>
               <ol class="list-unstyled mb-0">
-                <li><a class=text-decoration-none href="archivo.html">Julio 2023</a></li>
-                <li><a class=text-decoration-none href="archivo.html">Junio 2023</a></li>
-                <li><a class=text-decoration-none href="archivo.html">Mayo 2023</a></li>
+                {% for archivo in archivos %}
+                  <li><a class=text-decoration-none href= {% url 'archivo' year=archivo.fecha.year month=archivo.fecha.month %} >{{ archivo.fecha|date:'F Y'|capfirst }}</a></li>
+                {% endfor %}
               </ol>
             </article>
 
             <article class="p-4 text-center">
               <h4 class="fst-italic">Nuestras redes</h4>
               <ol class="list-unstyled">
-                <li><a class=text-decoration-none href="#" target="_blank"><i class="bi bi-github"></i> GitHub</a></li>
-                <li><a class=text-decoration-none href="#" target="_blank"><i class="bi bi-linkedin"></i> Linkedin</a>
-                </li>
+                {% for red in redes %}
+                 {% if red.url %}
+                    <li><a class='text-decoration-none' href={{ red.url }} target="_blank"><i class="{{red.icono}}"></i>  {{red}}</a></li>
+                  {% endif %}
+                {% endfor %}
               </ol>
             </article>
 
@@ -88,6 +119,7 @@
         </aside>
       </section>
     </main>
+    <script src={% static 'js/bootstrap.bundle.min.js' %}></script>
 
     <footer class="blog-footer">
       <p>Copyright © project_code 2023</p>
