modificado titulo template y agregado logo de equipo

--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -11,7 +11,7 @@
     content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description" content="">
-  <title>Blog Tecno</title>
+  <title>RobotBlog</title>
   <link href= {% static 'blog/css/bootstrap.min.css' %} rel="stylesheet">
   <!-- Custom styles for this template -->
   <link href= {% static 'blog/css/blog.css' %} rel="stylesheet">
@@ -81,6 +81,10 @@
             <article class="p-4 mb-3 bg-light rounded">
               <h4 class="fst-italic text-center">Acerca de</h4>
               <p class="mb-0 text-justify">{{ acerca }}</p>
+            </article>
+
+            <article class="p-4 d-flex justify-content-center">
+              <img width="220" src="{% static 'blog/img/logo-equipo.jpg' %}" alt="logo-equipo">
             </article>
 
             <article class="p-4 text-center">
